--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 title:          Saturday10AM
 description:    "대전 IT/개발 커뮤니티"
-baseurl:        "/"
+baseurl:        ""
 url:            "http://sat10am.com"
 
 # Author
 author:
   name:         Saturday10Am
   url:          http://sat10am.com
-  email:        info@sat10am.com
+  email:        hyungsub08@naver.com
 
 # Build settings
 markdown:       kramdown
@@ -25,3 +25,8 @@ plugins:
 # Permalinks
 permalink:      /:year-:month-:day/:title
 paginate:       5
+
+# Custom vars
+version:             1.0.0
+github:
+  repo:              https://github.com/EXIDD/saturday10am/
